# hops

./: AUTHORS  ChangeLog  INSTALL  MANIFEST  ProjectHome.md  configure.ac
doc/: Simulate_call_graph.gv  designstyle.css  hops.html
math/: coordinates2d.cc  coordinates2d_test.cc  coordinates3d.cc  coordinates3d.h  polygons.cc  polygons.h  polygons_test.cc  quaternion.cc  quaternion.h  quaternion_test.cc
solpos/: solpos.cc  solpos.h
src/: aperture.cc  aperture.h  aperture_test.cc  common.h  field.cc  field.h  field_layout.proto  heliostat_actuation_test.cc  heliostat_test.cc  io.h  optic_container.cc  optic_container.h  optic_container_connection.cc  optical_simulation_main.cc  receiver.cc  receiver.h  receiver_element.cc  receiver_element.h  receiver_surfaces.cc  simulation.cc  stl_delete_elements.h  sun.cc  sun_calculators.cc  sun_calculators.h
src/examples/: flat_receiver_overhead_layout
trunk/: COPYING  INSTALL  Makefile.am  README
trunk/doc/: Containers.gv
trunk/gtest/include/gtest/internal/: gtest-internal.h
trunk/math/: coordinates.h  coordinates2d.cc  coordinates2d.h  coordinates3d.cc  coordinates3d_test.cc  coordinates_test.cc  polygons.cc  polygons_test.cc  quaternion.cc  quaternion_test.cc
trunk/solpos/: LICENSE  README.google  solpos.cc
trunk/src/: aperture.cc  heliostat.cc  heliostat.h  heliostat_actuation.cc  heliostat_actuation.h  heliostat_actuation_test.cc  heliostat_test.cc  io.cc  optic.cc  optic.h  optic_container.cc  optic_container_connection.h  optical_simulation_main.cc  plot_results.sh  receiver_element.cc  receiver_surfaces.cc  receiver_surfaces.h  simulation.h  sky.h  sun.cc  sun.h  sun_calculators.cc
trunk/src/examples/: curved_receiver_oblique_layout  two_heliostats_layout
